--- a/src/app/views/user/registration-form/registration-form.component.scss
+++ b/src/app/views/user/registration-form/registration-form.component.scss
@@ -38,6 +38,7 @@ a, a:hover {
 	font-size: 2.5rem;
 }
 
+
 /* Form Styles */
 .formulario {
 	flex-wrap: wrap;
@@ -48,7 +49,7 @@ a, a:hover {
 	overflow: hidden;
 	position: relative;
 	color: #18151f;
-	background-color: #e1e5ea;
+  // con degraddo el backounrg
 
 	.formulario__header {
 		font-size: 1.75rem;
@@ -58,7 +59,7 @@ a, a:hover {
 	}
 
 	.formulario__bar {
-		width: 30px;
+		width: 40px;
 		height: 10px;
 		margin: 10px 0;
 		border-radius: 5px;
