--- a/src/app/views/admin/login/login.component.scss
+++ b/src/app/views/admin/login/login.component.scss
@@ -1,384 +1,116 @@
-/* src/app/login/login.component.scss */
-$login-bg-color: #1c1c1c;
-$login-text-color: #ffd700;
-$login-button-bg-color: #ffd700;
-$login-button-text-color: #1c1c1c;
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f8f9fa;
-  min-height: 75vh;
-  text-align: center;
-
-  .card-box{
-    background-color: $login-bg-color;
-    color: lighten($login-button-bg-color, 20%);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(28, 28, 28, 0.5);
-    max-width: 400px;
-    width: 100%;
-  }
-
-  h2 {
-    text-align: center;
-    margin-bottom: 1rem;
-  }
-
-  .form-group {
-    margin-bottom: 1rem;
-    text-align: left;
-
-    label {
-      margin-bottom: 0.5rem;
-    }
-
-    input[type="text"], input[type="password"]{
-      width: 100%;
-      padding: 0.75rem;
-      border: 1px solid lighten($login-text-color, 20%);
-      border-radius: 5px;
-      font-size: 1rem;
-      font-family: "Helvetica Neue", Arial, sans-serif;
-      background-color: $login-bg-color;
-      color: lighten($login-text-color, 20%);
-      box-sizing: border-box;
-    }
-
-    .password-container {
-      position: relative;
-      display: flex;
-      align-items: center;
-
-      input[type="password"], input[type="text"] {
-        flex: 1;
-      }
-
-      .toggle-password {
-        position: absolute;
-        right: 10px;
-        font-size: 1rem;
-        font-family: "Helvetica Neue", Arial, sans-serif;
-        color: lightten($login-text-color, 20%);
-        cursor: pointer;
-      }
-    }
-
-    small {
-      color: #f8f9fa;
-      font-size: 0.8em;
-      font-family: "Helvetica Neue", Arial, sans-serif;
-    }
-  }
-
-  .form-group:last-child {
-    text-align: center;
-
-    button {
-      background-color: $login-button-bg-color;
-      color: $login-button-text-color;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-
-      &:hover {
-        background-color: darken($login-button-bg-color, 10%);
-      }
-
-      &:disabled {
-        background-color: lighten($login-button-bg-color, 20%);
-        cursor: not-allowed;
-      }
-    }
-  }
-
-  .links {
-    margin-top: 1rem;
-    text-align: center;
-
-    a {
-      color: lighten($login-text-color, 20%);
-      text-decoration: none;
-      display: block;
-      margin-top: 0.5rem;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-
-  @media (max-width: 768px){
-    .card-box{
-      padding: 1.5rem;
-    }
-  }
-}
-
-
-
-/**
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style-type: none;
-  font-family: poppins;
-}
-
-.container {
-  min-height: calc(100vh - 40px * 2);
-  display: grid;
-  grid-template-columns: 50% 50%;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.login-left {
-  display: flex;
-  flex-direction: column;
-  justify-content: content;
-  padding-left: 100px;
-  background-color: white;
-}
-
-.login-right {
-  display: flex;
-  justify-content: center;
-}
-
-.form-item {
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.pass-key {
-  padding-right: 30px;
-}
-
-.password-toggle {
-  position: absolute;
-  top: 70%;
-  right: 10px;
-  transform: translateY(-50%);
-  cursor: pointer;
-  width: 30px;
-}
-
-.remember-forgot {
-  margin-top: 273px;
-  padding: 10px 0;
-  font-size: 16px;
-  position: absolute;
-  transform: translate(30px, -10px);
-  margin-left: 250px;
-}
-
-.bg-grey {
-  width: 100%;
-  border-top: 0;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  padding: 1em;
-  text-align: center;
-  color: #212022a9;
-}
-
-.login-right img {
-  width: 100%;
-}
-
-.login-header {
-  margin-top: 50px;
-}
-
-.login-header h1 {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.login-header p {
-  margin-top: 20px;
-  opacity: .7;
-}
-
-.login-form {
-  width: 450px;
-  margin-top: 50px;
-}
-
-.login-content {
-  display: flex;
-  flex-direction: column;
-  gap: 35px;
-}
-
-.login-footer {
-  display: flex;
-  gap: 30px;
-  margin-top: 10px;
-  font-size: 1rem;
-}
-
-.login-footer a {
-  flex: 6;
-  gap: 15px;
-  background-color: #eee;
-  border-radius: 100px;
-  padding: .6rem;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-  transition: .5s;
-}
-
-.login-footer a:hover {
-  background-color: black;
-  color: white;
-}
-
-label:not(.checkboxLabel) {
-  display: inline-block;
-  background-color: white;
-  margin-bottom: 10px;
-  position: absolute;
-  padding: 0 10px;
-  transform: translate(30px, -10px);
-  font-size: 14px;
-}
-
-input[type='text'],
-input[type='password'] {
-  border: 1px solid black;
-  height: 55px;
-  padding: 0 2rem;
-  width: 100%;
-  outline: none;
-  transition: background .5s;
-  font-size: 18px;
-  border-radius: 100px;
-}
-
-.show {
+.error-message {
   display: block;
-  position: absolute;
-  margin-left: 380px;
-  bottom: 250px;
-  font-size: 15px;
-  color: black;
-  cursor: pointer;
+  color: red;
+  text-align: center;
 }
 
-label[for=email],
-label[for=password],
-label[for=text] {
-  font-size: 1.1rem;
-  padding-left: 20px;
-  font-weight: 4600;
+.main {
+  background-color: #ffffff;
+  width: 400px;
+  height: 400px;
+  margin: 7em auto;
+  border-radius: 1.5em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
-.checkbox {
-  display: flex;
-  align-items: center;
-  gap: 7px;
+.sign {
+  padding-top: 40px;
+  color: #2563EB;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 23px;
 }
 
-input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
-  accent-color: black;
-}
-
-button {
+.un {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
   border: none;
-  padding: 1rem;
-  height: 55px;
-  font-size: 18px;
-  border-radius: 100px;
-  text-transform: uppercase;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 15px; 
+  margin-left: auto; 
+  margin-right: auto;
+  display: block; 
+  text-align: center;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.error-message {
+  display: block;
+  color: red;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 12px;
+}
+
+.un.ng-invalid.ng-touched {
+  margin-bottom: 15px;
+}
+
+form.form1 {
+  padding-top: 40px;
+}
+
+.pass {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 15px; 
+  margin-left: auto; 
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.un:focus,
+.pass:focus {
+  border: 2px solid rgba(0, 0, 0, 0.18) !important;
+}
+
+.submit {
   cursor: pointer;
-  margin-bottom: 30px;
-  transition: .5s;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right,  #77c5f9, #2563EB);
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: "Ubuntu", sans-serif;
+  margin-left: 35%;
+  font-size: 13px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  margin-top: 15px;
 }
 
-button:hover {
-  background: black;
-  color: white;
+.forgot {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #e1bee7;
+  padding-top: 15px;
 }
 
-::placeholder {
-  color: grey;
-  font-size: 1rem;
-}
 
-@media(max-width: 1300px) {
-  .login-left {
-    padding: 50px !important;
-  }
 
-  .login-right {
-    width: 500px;
-  }
-
-  .login-form {
-    width: 100%;
-  }
-
-  .login-footer {
-    flex-direction: column;
-    gap: 15px;
+@media (max-width: 600px) {
+  .main {
+    border-radius: 0px;
   }
 }
-
-@media(max-width: 1100px) {
-  .login-right {
-    width: 400px;
-  }
-}
-
-@media(max-width: 900px) {
-  .login-header h1 {
-    font-size: 25px;
-  }
-
-  .login-header p {
-    font-size: 16px;
-  }
-
-  .login-right {
-    width: 400px;
-  }
-
-  .container.active {
-    filter: blur(15px);
-  }
-}
-
-@media(max-width: 768px) {
-  .login-header h1 {
-    font-size: 30px;
-  }
-
-  body {
-    padding: 20px;
-  }
-
-  .container {
-    grid-template-columns: auto;
-  }
-
-  .login-right {
-    display: none;
-  }
-}
-  */
