--- a/src/app/views/user/upload-receipt/upload-receipt.component.scss
+++ b/src/app/views/user/upload-receipt/upload-receipt.component.scss
@@ -19,33 +19,13 @@
     
     
     .file-preview {
-      display: flex;
-      justify-content: center;
-      position: relative;
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
      
-      .close-btn {
-        position: absolute;
-        top: 5px;
-        right:50px;
-        background: transparent;
-        border: none;
-        font-size: 24px;
-        color: #333;
-      }
-      
-      .close-btn_2 {
-        position: absolute;
-        top: 5px;
-        right: 9px;
-        background: transparent;
-        border: none;
-        font-size: 24px;
-        color: #333;
-      }
-    
       img.preview-image {
-        max-width: 80%; 
-        height: auto;    
+        width: 512px; 
+        height: 396.6px; 
         object-fit: contain; 
       }
     
@@ -95,9 +75,9 @@
     }
     
     .submit-button {
-      background-color: white;
-      border: 3px solid #00bcd4;
-      color: #00bcd4;
+      background-color: #77bb7a; 
+      border: 3px solid #388E3C; 
+      color: #ffffff; 
       padding: 12px 32px; 
       text-align: center;
       text-decoration: none;
@@ -111,11 +91,32 @@
     }
     
     .submit-button:hover {
-      background-color: #e0f7fa; 
-      color: #00bcd4;
+      background-color: #81C784; 
+      color: #388E3C; 
     }
+    
+    .clean-button {
+      background-color: #00bcd4; 
+      border: 3px solid #00796b; 
+      color: #ffffff; 
+      padding: 12px 32px; 
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-weight: 700;
+      font-size: 18px;
+      margin: 8px 2px; 
+      cursor: pointer;
+      border-radius: 12px;
+      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    }
+    
+    .clean-button:hover {
+      background-color: #4db6ac; 
+      color: #00796b; 
+    }
+    
     
   }
 }
-
 
