--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -7,7 +7,9 @@
     top: 0;        
     left: 0;        
     width: 100%;    
-    z-index: 1000;  
+    z-index: 1000; 
+    border: none;
+    border-radius: 90%;
 }
 
 :host ::ng-deep .p-menubar .p-menubar-start {
