--- a/src/app/views/admin/login/login.component.html
+++ b/src/app/views/admin/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <p class="sign" align="center">Inciar Sesion</p>
+  <p class="sign" align="center">Iniciar Sesion</p>
   <form class="form1" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <input
       class="un"
