--- a/src/app/views/admin/login/login.component.scss
+++ b/src/app/views/admin/login/login.component.scss
@@ -1,3 +1,12 @@
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  font-family: "Ubuntu", sans-serif;
+}
+
 .error-message {
   display: block;
   color: red;
