--- a/src/app/views/admin/verify-data/verify-data.component.html
+++ b/src/app/views/admin/verify-data/verify-data.component.html
@@ -54,7 +54,7 @@
         <td style="text-align: center">
           <p-tag *ngIf="rowData.estado === 'Aceptado'" icon="pi pi-check" severity="success" value="Aceptado"></p-tag>
           <p-tag *ngIf="rowData.estado === 'Rechazado'" icon="pi pi-times" severity="danger" value="Rechazado"></p-tag>
-          <p-tag *ngIf="rowData.estado === 'Pendiente'" icon="pi pi-clock" severity="warning" value="Pendiente"></p-tag>
+          <p-tag *ngIf="rowData.estado === 'Pendiente'" icon="pi pi-spin pi-spinner" severity="warning" value="Pendiente"></p-tag>
         </td>
         <td style="text-align: center">
           <button class="btn_success" (click)="aceptar(rowData)" [disabled]="rowData.estado !== 'Pendiente'">
