--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer-area footer--light mt-5">
+<footer class="footer-area footer--light ">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-12">
