--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,7 +3,7 @@ body {
  font-family:Rubik,sans-serif;
  position:relative;
  font-weight:400;
- font-size:15px
+ font-size:15px;
 }
 ul {
  padding:0;
