--- a/src/app/views/admin/end-process/end-process.component.scss
+++ b/src/app/views/admin/end-process/end-process.component.scss
@@ -1,8 +1,23 @@
+
+:host {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  font-family: "Ubuntu", sans-serif;
+  padding-top: 5rem; 
+}
+
 .card {
-  background: var(--surface-card);
-  padding: 2rem;
-  border-radius: 10px;
-  margin-bottom: 1rem;
+  width: 90%; 
+  margin-top: 2rem; 
+  margin-bottom: 2rem; 
+  background: white; 
+  padding: 2rem; 
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+  border-radius: 10px; 
 }
 
 .btn_success {
@@ -48,7 +63,6 @@
 .btn_search:active .pi-search {
   transform: scale(1.3);
 }
-
 
 .dialog-content-center {
   display: flex;
