--- a/src/app/emails/verify-data-success/verify-data-success.component.html
+++ b/src/app/emails/verify-data-success/verify-data-success.component.html
@@ -341,13 +341,12 @@
                                                                       style="Margin:0;mso-line-height-rule:exactly;font-family:'Josefin Sans', helvetica, arial, sans-serif;line-height:18px;letter-spacing:0;color:#F8F9FB;font-size:12px">
                                                                       <a target="_blank"
                                                                           href="https://viewstripo.email"
-                                                                          style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">My
-                                                                          account&nbsp;</a>• <a target="_blank"
+                                                                          style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Cuentat&nbsp;</a>• <a target="_blank"
                                                                           href="https://viewstripo.email"
                                                                           style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Blog</a>&nbsp;•
                                                                       <a target="_blank"
                                                                           href="https://viewstripo.email"
-                                                                          style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Help</a>
+                                                                          style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Ayuda</a>
                                                                   </p>
                                                               </td>
                                                           </tr>
@@ -356,9 +355,8 @@
                                                                   style="padding:0;Margin:0;padding-bottom:5px">
                                                                   <p
                                                                       style="Margin:0;mso-line-height-rule:exactly;font-family:'Josefin Sans', helvetica, arial, sans-serif;line-height:18px;letter-spacing:0;color:#F8F9FB;font-size:12px">
-                                                                      Vestibulum morbi blandit cursus risus at
-                                                                      ultrices mi<br><br><a href="" target="_blank"
-                                                                          style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Unsubscribe</a>
+                                                                      Incripciones a Fuerzas Armadas, inscribite a lo que desees<br><br><a href="" target="_blank"
+                                                                          style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Desuscribirse</a>
                                                                   </p>
                                                               </td>
                                                           </tr>
