--- a/src/app/emails/end-process-email-denied/end-process-email-denied.component.html
+++ b/src/app/emails/end-process-email-denied/end-process-email-denied.component.html
@@ -354,7 +354,8 @@
                                       color: #001523;
                                     "
                                   >
-                                    Comprobante de pago rechazado
+                                    Documento de nota de grado no cumple
+                                    nuestros estandares.
                                   </h1>
                                 </td>
                               </tr>
@@ -419,8 +420,8 @@
                                       font-size: 16px;
                                     "
                                   >
-                                    Lamentablemente, tu comprobante de pago no
-                                    fue aceptado.
+                                    Lamentablemente, tu nota de grado no cumple
+                                    con nuestro puntaje.
                                   </p>
                                   <p
                                     style="
@@ -448,8 +449,8 @@
                                       font-size: 16px;
                                     "
                                   >
-                                    El comprobante no es correcto, no esta bien
-                                    enfocado o no esta en el formato adecuado.
+                                    La nota de grado no se puede observar de
+                                    forma correcta.
                                   </p>
                                   <p
                                     style="
@@ -1131,7 +1132,7 @@
                                         color: #f8f9fb;
                                         font-size: 12px;
                                       "
-                                      >My account&nbsp;</a
+                                      >Cuentat&nbsp;</a
                                     >•
                                     <a
                                       target="_blank"
@@ -1153,7 +1154,7 @@
                                         color: #f8f9fb;
                                         font-size: 12px;
                                       "
-                                      >Help</a
+                                      >Ayuda</a
                                     >
                                   </p>
                                 </td>
@@ -1179,8 +1180,8 @@
                                       font-size: 12px;
                                     "
                                   >
-                                    Vestibulum morbi blandit cursus risus at
-                                    ultrices mi<br /><br /><a
+                                    Incripciones a Fuerzas Armadas, inscribite a
+                                    lo que desees<br /><br /><a
                                       href=""
                                       target="_blank"
                                       style="
@@ -1189,7 +1190,7 @@
                                         color: #f8f9fb;
                                         font-size: 12px;
                                       "
-                                      >Unsubscribe</a
+                                      >Desuscribirse</a
                                     >
                                   </p>
                                 </td>
