--- a/src/app/views/admin/end-process/end-process.component.html
+++ b/src/app/views/admin/end-process/end-process.component.html
@@ -108,7 +108,7 @@
 </div>
 
 <p-dialog
-  header="Comprobante de Pago"
+  header="Nota de Grado"
   [modal]="true"
   [(visible)]="Comprobante"
   [style]="{ width: '50rem' }"
