--- a/src/app/emails/end-process-email-success/end-process-email-success.component.html
+++ b/src/app/emails/end-process-email-success/end-process-email-success.component.html
@@ -354,7 +354,7 @@
                                       color: #001523;
                                     "
                                   >
-                                    Comprobante de pago Confirmado
+                                    Nota de Grado Aceptada
                                   </h1>
                                 </td>
                               </tr>
@@ -419,9 +419,9 @@
                                       font-size: 16px;
                                     "
                                   >
-                                    Nos complace informarle que el recibo del
-                                    pago fue validado y confirmado
-                                    satisfactoriamente.
+                                    Nos complace informarle que el documento de
+                                    la nota de grado cumple con nuestros
+                                    estándares de calidad y ha sido aceptado.
                                   </p>
                                   <p
                                     style="
@@ -1085,44 +1085,140 @@
                                   align="left"
                                   style="padding: 0; margin: 0; width: 306px"
                                 >
-                                <table cellpadding="0" cellspacing="0" class="es-right" align="right"
-                                role="none"
-                                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-                                <tr>
-                                    <td align="left" style="padding:0;Margin:0;width:306px">
-                                        <table cellpadding="0" cellspacing="0" width="100%"
-                                            role="presentation"
-                                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                                            <tr>
-                                                <td align="center"
-                                                    style="padding:0;Margin:0;padding-bottom:15px;padding-top:5px">
-                                                    <p
-                                                        style="Margin:0;mso-line-height-rule:exactly;font-family:'Josefin Sans', helvetica, arial, sans-serif;line-height:18px;letter-spacing:0;color:#F8F9FB;font-size:12px">
-                                                        <a target="_blank"
-                                                            href="https://viewstripo.email"
-                                                            style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Cuentat&nbsp;</a>• <a target="_blank"
-                                                            href="https://viewstripo.email"
-                                                            style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Blog</a>&nbsp;•
-                                                        <a target="_blank"
-                                                            href="https://viewstripo.email"
-                                                            style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Ayuda</a>
-                                                    </p>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td align="center"
-                                                    style="padding:0;Margin:0;padding-bottom:5px">
-                                                    <p
-                                                        style="Margin:0;mso-line-height-rule:exactly;font-family:'Josefin Sans', helvetica, arial, sans-serif;line-height:18px;letter-spacing:0;color:#F8F9FB;font-size:12px">
-                                                        Incripciones a Fuerzas Armadas, inscribite a lo que desees<br><br><a href="" target="_blank"
-                                                            style="mso-line-height-rule:exactly;text-decoration:underline;color:#F8F9FB;font-size:12px">Desuscribirse</a>
-                                                    </p>
-                                                </td>
-                                            </tr>
+                                  <table
+                                    cellpadding="0"
+                                    cellspacing="0"
+                                    class="es-right"
+                                    align="right"
+                                    role="none"
+                                    style="
+                                      mso-table-lspace: 0pt;
+                                      mso-table-rspace: 0pt;
+                                      border-collapse: collapse;
+                                      border-spacing: 0px;
+                                      float: right;
+                                    "
+                                  >
+                                    <tr>
+                                      <td
+                                        align="left"
+                                        style="
+                                          padding: 0;
+                                          margin: 0;
+                                          width: 306px;
+                                        "
+                                      >
+                                        <table
+                                          cellpadding="0"
+                                          cellspacing="0"
+                                          width="100%"
+                                          role="presentation"
+                                          style="
+                                            mso-table-lspace: 0pt;
+                                            mso-table-rspace: 0pt;
+                                            border-collapse: collapse;
+                                            border-spacing: 0px;
+                                          "
+                                        >
+                                          <tr>
+                                            <td
+                                              align="center"
+                                              style="
+                                                padding: 0;
+                                                margin: 0;
+                                                padding-bottom: 15px;
+                                                padding-top: 5px;
+                                              "
+                                            >
+                                              <p
+                                                style="
+                                                  margin: 0;
+                                                  mso-line-height-rule: exactly;
+                                                  font-family: 'Josefin Sans',
+                                                    helvetica, arial, sans-serif;
+                                                  line-height: 18px;
+                                                  letter-spacing: 0;
+                                                  color: #f8f9fb;
+                                                  font-size: 12px;
+                                                "
+                                              >
+                                                <a
+                                                  target="_blank"
+                                                  href="https://viewstripo.email"
+                                                  style="
+                                                    mso-line-height-rule: exactly;
+                                                    text-decoration: underline;
+                                                    color: #f8f9fb;
+                                                    font-size: 12px;
+                                                  "
+                                                  >Cuentat&nbsp;</a
+                                                >•
+                                                <a
+                                                  target="_blank"
+                                                  href="https://viewstripo.email"
+                                                  style="
+                                                    mso-line-height-rule: exactly;
+                                                    text-decoration: underline;
+                                                    color: #f8f9fb;
+                                                    font-size: 12px;
+                                                  "
+                                                  >Blog</a
+                                                >&nbsp;•
+                                                <a
+                                                  target="_blank"
+                                                  href="https://viewstripo.email"
+                                                  style="
+                                                    mso-line-height-rule: exactly;
+                                                    text-decoration: underline;
+                                                    color: #f8f9fb;
+                                                    font-size: 12px;
+                                                  "
+                                                  >Ayuda</a
+                                                >
+                                              </p>
+                                            </td>
+                                          </tr>
+                                          <tr>
+                                            <td
+                                              align="center"
+                                              style="
+                                                padding: 0;
+                                                margin: 0;
+                                                padding-bottom: 5px;
+                                              "
+                                            >
+                                              <p
+                                                style="
+                                                  margin: 0;
+                                                  mso-line-height-rule: exactly;
+                                                  font-family: 'Josefin Sans',
+                                                    helvetica, arial, sans-serif;
+                                                  line-height: 18px;
+                                                  letter-spacing: 0;
+                                                  color: #f8f9fb;
+                                                  font-size: 12px;
+                                                "
+                                              >
+                                                Incripciones a Fuerzas Armadas,
+                                                inscribite a lo que desees<br /><br /><a
+                                                  href=""
+                                                  target="_blank"
+                                                  style="
+                                                    mso-line-height-rule: exactly;
+                                                    text-decoration: underline;
+                                                    color: #f8f9fb;
+                                                    font-size: 12px;
+                                                  "
+                                                  >Desuscribirse</a
+                                                >
+                                              </p>
+                                            </td>
+                                          </tr>
                                         </table>
-                                    </td>
-                                </tr>
-                            </table> <!--[if mso]></td></tr></table><![endif]-->
+                                      </td>
+                                    </tr>
+                                  </table>
+                                  <!--[if mso]></td></tr></table><![endif]-->
                                 </td>
                               </tr>
                             </table>
